[tool.poetry]
name = "dclmic-export"
version = "0.1.0"
description = ""
authors = ["Dallas College LMIC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
XlsxWriter = "^3.2.0"
gspread = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
